--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -302,33 +302,33 @@ basketTotalsLabel = "Basket totals TODO"
 ; Place order
 placeOrderLabel = "Kaufabschluss Button"
 ; Address
-addressLabel = "Addressauswahl TODO"
-addressType = "addressType TODO"
-addressTypeTooltip = "addressTypeTooltip TODO"
-addressInvoice = "addressInvoice TODO"
-addressShipping = "addressShipping TODO"
-addressLayout = "addressLayout TODO"
-addressLayoutTooltip = "addressLayoutTooltip TODO"
-addressLayoutDE = "addressLayoutDE TODO"
-addressLayoutGB = "addressLayoutGB TODO"
-addressFieldsInvoiceDE = "addressFieldsInvoiceDE TODO"
-addressRequiredFieldsInvoiceDE = "addressRequiredFieldsInvoiceDE TODO"
-addressFieldsInvoiceGB = "addressFieldsInvoiceGB TODO"
-addressRequiredFieldsInvoiceGB = "addressRequiredFieldsInvoiceGB TODO"
-addressFieldsShippingDE = "addressFieldsShippingDE TODO"
-addressRequiredFieldsShippingDE = "addressRequiredFieldsShippingDE TODO"
-addressFieldsShippingGB = "addressFieldsShippingGB TODO"
-addressRequiredFieldsShippingGB = "addressRequiredFieldsShippingGB TODO"
-addressFieldName1 = Company
-addressFieldVatNumber = VAT number
-addressFieldSalutation = Form of address
-addressFieldTitle = Title
-addressFieldBirthday = Date of birth
-addressFieldName4 = Name affix
-addressFieldAddress3 = Additional address 1
-addressFieldAddress4 = Additional address 2
-addressFieldStateId = State
-addressFieldPhoneNumber = Phone number
+addressLabel = "Adressauswahl TODO"
+addressType = "Adresstyp"
+addressTypeTooltip = "Rechnungs- oder Lieferadresse wählen."
+addressInvoice = "Rechnungsadresse"
+addressShipping = "Lieferadresse"
+addressLayout = "Adressenformat"
+addressLayoutTooltip = "TODO"
+addressLayoutDE = "Adressformat DE"
+addressLayoutGB = "Adressformat UK"
+addressFieldsInvoiceDE = "Rechnungsadressfelder anzeigen (DE)"
+addressRequiredFieldsInvoiceDE = "Rechnugnsadressfelder validieren (DE)"
+addressFieldsInvoiceGB = "Rechnungsadressfelder anzeigen (UK)"
+addressRequiredFieldsInvoiceGB = "Rechnungsadressfelder validieren (UK)"
+addressFieldsShippingDE = "Lieferadressfelder anzeigen (DE)"
+addressRequiredFieldsShippingDE = "Lieferadressfelder validieren (DE)"
+addressFieldsShippingGB = "Lieferadressfelder anzeigen (UK)"
+addressRequiredFieldsShippingGB = "Lieferadressfelder validieren (UK)"
+addressFieldName1 = Firma
+addressFieldVatNumber = Ust.-Nr.
+addressFieldSalutation = Anrede
+addressFieldTitle = Titel
+addressFieldBirthday = Geburtsdatum
+addressFieldName4 = Namenszusatz
+addressFieldAddress3 = Adresszusatz 1
+addressFieldAddress4 = Adresszusatz 2
+addressFieldStateId = Bundesland
+addressFieldPhoneNumber = Telefonnummer
 addressFieldEnName1 = Company
 addressFieldEnVatNumber = VAT number
 addressFieldEnSalutation = Form of address
