ADD SubscribeNewsletterCheck (vue component)

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -385,6 +385,8 @@ newsletterOptOutInfoText = "Bitte geben Sie Ihre E-Mail-Addresse ein, um sich vo
 newsletterOptOutSuccessMessage = "Die Abmeldung vom Newsletter war erfolgreich."
 newsletterOptOutTitle = "Newsletter Abmeldung"
 newsletterOptInMessage = "Ihre Email-Adresse wurde bestätigt."
+; newsletter (checkbox component)
+newsletterCheckboxLabel = "Ja, ich möchte immer über aktuelle Produkte, Angebote und Neuigkeiten per Newsletter informiert werden."
 ; notifications - Benachrichtigungen
 notificationRemoveCouponMinimumOrderValueIsNotReached = "Der eingelöste Gutschein wurde entfernt. Der Mindestbestellwert wird nicht mehr erreicht."
 notificationsCalculateShippingFailed = "Bei der Versandkostenberechnung kam es zu einem Fehler. Bitte benachrichtigen Sie den Betreiber."
