--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -372,6 +372,7 @@ pageNotFoundHomepage = "Homepage"
 pageNotFoundOops = "Oops, something went terribly wrong!"
 pageNotFoundPage = "The requested page was not found."
 ; pageNotFound - Not found
+; newsletter
 newsletterFirstName = "First name"
 newsletterLastName = "Last name"
 newsletterEmail = "Email"
@@ -384,6 +385,8 @@ newsletterOptOutSuccessMessage = "You have successfully unsubscribed from our ne
 newsletterOptOutInfoText = "Please enter your E-mail address to unsubscribe from our newsletter."
 newsletterOptOutTitle = "Newsletter ABMELDUNG"
 newsletterOptInMessage = "Your email address has been confirmed."
+; newsletter (checkbox component)
+newsletterCheckboxLabel = "Ja, ich möchte immer über aktuelle Produkte, Angebote und Neuigkeiten per Newsletter informiert werden."
 ; notifications - Notifications
 notificationRemoveCouponMinimumOrderValueIsNotReached = "The redeemed coupon has been removed. The minimum order value was not reached."
 notificationsCalculateShippingFailed = "Error while calculating shipping costs. Please contact the provider."
