--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -345,3 +345,15 @@ basketLabel = "Warenkorbinhalt"
 contactWishLabel = "Hinweise und Wünsche"
 ; Coupon
 couponLabel = "Gutscheineingabe"
+; Terms and conditions checkbox
+gtcCheckLabel = "AGB-Checkbox"
+gtcCheckHideCheckboxLabel = ""
+gtcCheckHideCheckboxTooltip = ""
+gtcCheckIsPreselectedLabel = ""
+gtcCheckIsPreselectedTooltip = ""
+gtcCheckIsRequiredLabel = ""
+gtcCheckIsRequiredTooltip = ""
+gtcCheckHasCustomTextLabel = ""
+gtcCheckHasCustomTextTooltip = ""
+gtcCheckCustomTextLabel = ""
+gtcCheckCustomTextTooltip = ""
