ADD Translation keys for PlaceOrderWidget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -300,6 +300,11 @@ paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwische
 ; Basket totals
 basketTotalsLabel = "Basket totals TODO"
 ; Place order
+placeOrderButtonSizeLabel = "Button Größe"
+placeOrderButtonSizeLg = "Groß"
+placeOrderButtonSizeNormal = "Normal / Standard"
+placeOrderButtonSizeSm = "Klein"
+placeOrderButtonSizeTooltip = "..."
 placeOrderLabel = "Kaufabschluss Button"
 ; Address
 addressLabel = "Adressauswahl TODO"
