--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -299,7 +299,12 @@ paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwische
 ; Basket totals
 basketTotalsLabel = "Basket totals TODO"
 ; Place order
-placeOrderLabel = "Placeorder Button"
+placeOrderButtonSizeLabel = "Button Größe"
+placeOrderButtonSizeLg = "Groß"
+placeOrderButtonSizeNormal = "Normal / Standard"
+placeOrderButtonSizeSm = "Klein"
+placeOrderButtonSizeTooltip = "..."
+placeOrderLabel = "Kaufabschluss Button"
 ; Address
 addressLabel = "Addressauswahl TODO"
 addressType = "addressType TODO"
