--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -298,14 +298,14 @@ paymentProviderLabel = "Zahlungsart Auswahl"
 paymentProviderHinttextLabel = "Hinweistext"
 paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Basket totals
-basketTotalsLabel = "Basket totals TODO"
+basketTotalsLabel = "Summen TODO"
 ; Place order
-placeOrderButtonSizeLabel = "Button Größe"
+placeOrderButtonSizeLabel = "Button-Größe"
 placeOrderButtonSizeLg = "Groß"
-placeOrderButtonSizeNormal = "Normal / Standard"
+placeOrderButtonSizeNormal = "Standard"
 placeOrderButtonSizeSm = "Klein"
-placeOrderButtonSizeTooltip = "..."
-placeOrderLabel = "Kaufabschluss Button"
+placeOrderButtonSizeTooltip = "Größe des Kaufen-Buttons auswählen"
+placeOrderLabel = "Kaufen-Button"
 ; Address
 addressLabel = "Adressauswahl TODO"
 addressType = "Adresstyp"
