--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -352,12 +352,12 @@ contactWishLabel = "Hinweise und Wünsche"
 couponLabel = "Gutscheineingabe"
 ; Terms and conditions checkbox
 gtcCheckLabel = "AGB-Checkbox"
-gtcCheckHideCheckboxLabel = ""
-gtcCheckHideCheckboxTooltip = ""
-gtcCheckIsPreselectedLabel = ""
-gtcCheckIsPreselectedTooltip = ""
-gtcCheckIsRequiredLabel = ""
-gtcCheckIsRequiredTooltip = ""
+gtcCheckHideCheckboxLabel = "Checkbox ausblenden"
+gtcCheckHideCheckboxTooltip = "Wählen, um Checkbox auszublenden."
+gtcCheckIsPreselectedLabel = "Checkbox vorauswählen"
+gtcCheckIsPreselectedTooltip = "Wählen, um Checkbox vorauszuwählen."
+gtcCheckIsRequiredLabel = "Pflichtfeld"
+gtcCheckIsRequiredTooltip = "Wählen, ob die Checkbox angehakt werden muss."
 gtcCheckHasCustomTextLabel = ""
 gtcCheckHasCustomTextTooltip = ""
 gtcCheckCustomTextLabel = ""
