--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -307,13 +307,13 @@ placeOrderButtonSizeSm = "Klein"
 placeOrderButtonSizeTooltip = "Größe des Kaufen-Buttons auswählen"
 placeOrderLabel = "Kaufen-Button"
 ; Address
-addressLabel = "Adressauswahl TODO"
+addressLabel = "Adressauswahl"
 addressType = "Adresstyp"
 addressTypeTooltip = "Rechnungs- oder Lieferadresse wählen."
 addressInvoice = "Rechnungsadresse"
 addressShipping = "Lieferadresse"
-addressLayout = "Adressenformat"
-addressLayoutTooltip = "TODO"
+addressLayout = "Adressformat"
+addressLayoutTooltip = "Adressformat DE oder UK wählen."
 addressLayoutDE = "Adressformat DE"
 addressLayoutGB = "Adressformat UK"
 addressFieldsInvoiceDE = "Rechnungsadressfelder anzeigen (DE)"
