ADD default checkout preset

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -12,6 +12,7 @@ containerHomepage = "Startseite"
 presetFooterDefault = "Standard-Footer"
 presetHeaderDefault = "Standard-Header"
 presetHomepageDefault = "Standard-Startseite"
+presetCheckoutDefault = "Standard-Checkout"
 ; Global
 widgetAppearanceDanger = "Gefahr"
 widgetAppearanceInfo = "Information"
