--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -12,6 +12,7 @@ containerHomepage = "Homepage"
 presetFooterDefault = "Standard footer"
 presetHeaderDefault = "Standard header"
 presetHomepageDefault = "Standard homepage"
+presetCheckoutDefault = "Standard checkout"
 ; Global
 widgetAppearanceDanger = "Danger"
 widgetAppearanceInfo = "Information"
