--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -88,12 +88,13 @@ checkout = "Kasse"
 checkoutBasket = "Warenkorb"
 checkoutBuyNow = "Kaufen"
 checkoutCancellationRight = "Widerrufs:hyphenrecht"
-checkoutCheckEntries = "Bitte Eingaben prüfen."
 checkoutCheckAcceptGtc = "Bitte AGB, Widerrufsrecht und Datenschutzerklärung akzeptieren."
+checkoutCheckAcceptNewsletterSubscription = "Bitte bestätigen Sie die Newsletter-Anmeldung."
+checkoutCheckAddressFormFields = "Bitte folgende Felder überprüfen: :fields."
+checkoutCheckEntries = "Bitte Eingaben prüfen."
+checkoutCheckInvoiceAddress = "Bitte Rechnungsaddresse auswählen."
 checkoutCheckPaymentProvider = "Bitte Zahlungsart auswählen."
 checkoutCheckShippingProfile = "Bitte Versanddienstleister auswählen."
-checkoutCheckInvoiceAddress = "Bitte Rechnungsaddresse auswählen."
-checkoutCheckAddressFormFields = "Bitte folgende Felder überprüfen: :fields."
 checkoutChooseOur = "Bitte nehmen Sie unsere :gtc, :cancellation und :policy zur Kenntnis."
 checkoutContactWish = "Hinweise und Wünsche"
 checkoutContactWishMessage = "Geben Sie hier Ihre Nachricht an uns ein."
