--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -90,6 +90,7 @@ checkoutBuyNow = "Order now"
 checkoutCancellationRight = "Cancellation rights"
 checkoutCheckEntries = "Please check the entries."
 checkoutCheckAcceptGtc = "Please accept the terms and conditions, cancellation rights and privacy policy."
+checkoutCheckAcceptNewsletterSubscription = "Please subscribe to our newsletter."
 checkoutCheckPaymentProvider = "Please select a payment method."
 checkoutCheckShippingProfile = "Please select a shipping service provider."
 checkoutCheckInvoiceAddress = "Please select an invoice address."
