--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -349,3 +349,15 @@ basketLabel = "Shopping cart content"
 contactWishLabel = "Notes and requests"
 ; Coupon
 couponLabel = "Coupon input"
+; Subscribe Newsletter Check
+subscribeNewsletterCheckCustomTextLabel = "Eigener Text"
+subscribeNewsletterCheckCustomTextTooltip = "Eigenen Text für die Checkbox eingeben."
+subscribeNewsletterCheckEmailFolderLabel = "E-Mail-Ordner ID"
+subscribeNewsletterCheckEmailFolderTooltip = "ID des E-Mail-Ordners eingeben."
+subscribeNewsletterCheckHideCheckboxLabel = "Checkbox ausblenden"
+subscribeNewsletterCheckHideCheckboxTooltip = "Wählen um Checkbox auszublenden."
+subscribeNewsletterCheckIsPreselectedLabel = "Checkbox vorausgewählt"
+subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorausgewählt darzustellen."
+subscribeNewsletterCheckIsRequiredLabel = "Pflicht"
+subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob Checkbox Pflicht ist, bevor ein Kauf abgeschlossen werden kann."
+subscribeNewsletterCheckLabel = "Newsletter Anmeldungs Checkbox"
