--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -358,7 +358,17 @@ gtcCheckIsPreselectedLabel = ""
 gtcCheckIsPreselectedTooltip = ""
 gtcCheckIsRequiredLabel = ""
 gtcCheckIsRequiredTooltip = ""
-gtcCheckHasCustomTextLabel = ""
-gtcCheckHasCustomTextTooltip = ""
 gtcCheckCustomTextLabel = ""
 gtcCheckCustomTextTooltip = ""
+; Subscribe Newsletter Check
+subscribeNewsletterCheckCustomTextLabel = "Eigener Text"
+subscribeNewsletterCheckCustomTextTooltip = "Eigenen Text für die Checkbox eingeben."
+subscribeNewsletterCheckEmailFolderLabel = "E-Mail-Ordner ID"
+subscribeNewsletterCheckEmailFolderTooltip = "ID des E-Mail-Ordners eingeben."
+subscribeNewsletterCheckHideCheckboxLabel = "Checkbox ausblenden"
+subscribeNewsletterCheckHideCheckboxTooltip = "Wählen um Checkbox auszublenden."
+subscribeNewsletterCheckIsPreselectedLabel = "Checkbox vorausgewählt"
+subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorausgewählt darzustellen."
+subscribeNewsletterCheckIsRequiredLabel = "Pflicht"
+subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob Checkbox Pflicht ist, bevor ein Kauf abgeschlossen werden kann."
+subscribeNewsletterCheckLabel = "Newsletter Anmeldungs Checkbox"
