--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -456,3 +456,6 @@ logPerformanceLevelLabel = Performance level
 logPerformanceLevelDevelopment = Development
 logPerformanceLevelLive = Live
 logCheckSyntax = Check for errors in markup before initialization
+
+routingCategoryCheckout=Category for checkout
+routingDefaultCheckout=Default Route for checkout
