--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -456,3 +456,6 @@ logPerformanceLevelLabel = Performance-Level
 logPerformanceLevelDevelopment = Entwicklungsmodus
 logPerformanceLevelLive = Live-Modus
 logCheckSyntax = Markup vor Initialisierung auf Fehler prüfen
+
+routingCategoryCheckout=Kategorie für Checkout
+routingDefaultCheckout=Standard-Route für Checkout
