--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -362,14 +362,14 @@ gtcCheckIsRequiredTooltip = "Wählen, ob die Checkbox angehakt werden muss."
 gtcCheckCustomTextLabel = ""
 gtcCheckCustomTextTooltip = ""
 ; Subscribe Newsletter Check
-subscribeNewsletterCheckCustomTextLabel = "Eigener Text"
-subscribeNewsletterCheckCustomTextTooltip = "Eigenen Text für die Checkbox eingeben."
+subscribeNewsletterCheckCustomTextLabel = "Text"
+subscribeNewsletterCheckCustomTextTooltip = "Text für die Checkbox eingeben."
 subscribeNewsletterCheckEmailFolderLabel = "E-Mail-Ordner ID"
 subscribeNewsletterCheckEmailFolderTooltip = "ID des E-Mail-Ordners eingeben."
 subscribeNewsletterCheckHideCheckboxLabel = "Checkbox ausblenden"
 subscribeNewsletterCheckHideCheckboxTooltip = "Wählen um Checkbox auszublenden."
-subscribeNewsletterCheckIsPreselectedLabel = "Checkbox vorausgewählt"
-subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorausgewählt darzustellen."
-subscribeNewsletterCheckIsRequiredLabel = "Pflicht"
-subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob Checkbox Pflicht ist, bevor ein Kauf abgeschlossen werden kann."
-subscribeNewsletterCheckLabel = "Newsletter Anmeldungs Checkbox"
+subscribeNewsletterCheckIsPreselectedLabel = "Checkbox vorausgewählen"
+subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorauszuwählen."
+subscribeNewsletterCheckIsRequiredLabel = "Pflichtfeld"
+subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob die Checkbox Pflichtangehakt werden muss."
+subscribeNewsletterCheckLabel = "Newsletter-Checkbox"
