--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -269,7 +269,7 @@ navigationNavigationStyleMegaMenu = "Mega Menü"
 navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 ; Separator
-seperatorCustomUnit = "Benutzerdefinierte Einheit";
+seperatorCustomUnit = "Einheit";
 separatorLabel = "Trennlinie"
 seperatorMarginBottom = "Außenabstand unten"
 seperatorMarginCustom = "Benutzerdefiniert"
@@ -318,7 +318,7 @@ addressLayoutTooltip = "Adressformat DE oder UK wählen."
 addressLayoutDE = "Adressformat DE"
 addressLayoutGB = "Adressformat UK"
 addressFieldsInvoiceDE = "Rechnungsadressfelder anzeigen (DE)"
-addressRequiredFieldsInvoiceDE = "Rechnugnsadressfelder validieren (DE)"
+addressRequiredFieldsInvoiceDE = "Rechnungsadressfelder validieren (DE)"
 addressFieldsInvoiceGB = "Rechnungsadressfelder anzeigen (UK)"
 addressRequiredFieldsInvoiceGB = "Rechnungsadressfelder validieren (UK)"
 addressFieldsShippingDE = "Lieferadressfelder anzeigen (DE)"
@@ -358,9 +358,9 @@ gtcCheckHideCheckboxTooltip = "Wählen, um Checkbox auszublenden."
 gtcCheckIsPreselectedLabel = "Checkbox vorauswählen"
 gtcCheckIsPreselectedTooltip = "Wählen, um Checkbox vorauszuwählen."
 gtcCheckIsRequiredLabel = "Pflichtfeld"
-gtcCheckIsRequiredTooltip = "Wählen, ob die Checkbox angehakt werden muss."
-gtcCheckCustomTextLabel = ""
-gtcCheckCustomTextTooltip = ""
+gtcCheckIsRequiredTooltip = "Wählen, ob die Checkbox vor Kaufabschluss angehakt werden muss."
+gtcCheckCustomTextLabel = "Text"
+gtcCheckCustomTextTooltip = "Text für die Checkbox eingeben."
 ; Subscribe Newsletter Check
 subscribeNewsletterCheckCustomTextLabel = "Text"
 subscribeNewsletterCheckCustomTextTooltip = "Text für die Checkbox eingeben."
@@ -371,5 +371,5 @@ subscribeNewsletterCheckHideCheckboxTooltip = "Wählen um Checkbox auszublenden.
 subscribeNewsletterCheckIsPreselectedLabel = "Checkbox vorausgewählen"
 subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorauszuwählen."
 subscribeNewsletterCheckIsRequiredLabel = "Pflichtfeld"
-subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob die Checkbox Pflichtangehakt werden muss."
+subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob die Checkbox vor Kaufabschluss angehakt werden muss."
 subscribeNewsletterCheckLabel = "Newsletter-Checkbox"
