--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -300,6 +300,18 @@ paymentProviderHinttextLabel = "Hinweistext"
 paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Basket totals
 basketTotalsLabel = "Summen TODO"
+basketTotalsVisibleFields = ""
+showBasketValueNet = ""
+showBasketValueGross = ""
+showBasketTotalsRebate = ""
+showBasketShippingCostsNet = ""
+showBasketShippingCostsGross = ""
+showBasketTotalSumNet = ""
+showBasketCoupon = ""
+showBasketVats = ""
+showBasketTotalSumGross = ""
+showBasketCouponDiscount = ""
+showBasketOpenAmount = ""
 ; Place order
 placeOrderButtonSizeLabel = "Button-Größe"
 placeOrderButtonSizeLg = "Groß"
