add/change translation

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -186,10 +186,10 @@ devTimeFormatMoment = "HH:mm"
 ; error - Fehlermeldungen
 errorActionIsNotExecuted = "Die Aktion konnte nicht ausgeführt werden."
 errorBasketItemVariationNotFound = "Die Variante ist nicht verfügbar."
-errorBasketItemNotEnoughStockForVariation = "Für die gewählte Menge ist nicht genügend Bestand verfügbar."
-errorBasketItemMaximumQuantityReachedForItem = "Die Maximalebestellmenge dieses Artikels wurde überschritten."
-errorBasketItemMaximumQuantityReachedForVariation = "Die Maximalebestellmenge dieser Variante wurde überschritten."
-errorBasketItemMinimumQuantityNotReachedForVariation = "Die Mindestbestellmenge dieser Variante wurde nicht erreicht."
+errorBasketItemNotEnoughStockForVariation = "Für die gewählte Menge ist nicht ausreichend Bestand verfügbar."
+errorBasketItemMaximumQuantityReachedForItem = "Die maximale Bestellmenge dieses Artikels wurde überschritten."
+errorBasketItemMaximumQuantityReachedForVariation = "Die maximale Bestellmenge dieser Variante wurde überschritten."
+errorBasketItemMinimumQuantityNotReachedForVariation = "Die Mindestbestellmenge dieser Variante wurde nicht erreicht.”
 ; error - Fehlermeldung
 ; footer - Footer
 footerAllRightsReserved = "Alle Rechte vorbehalten."
