--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -183,6 +183,14 @@ devDateTimeFormatMoment = "DD.MM.YYYY, HH:mm"
 devTimeFormat = "H:i"
 devTimeFormatMoment = "HH:mm"
 ; dev - Developer
+; error - Exceptions
+errorActionIsNotExecuted = “This action could not be executed.“
+errorBasketItemVariationNotFound = “This variation is not available.”
+errorBasketItemNotEnoughStockForVariation = “The available stock is not sufficient for the selected quantity.”
+errorBasketItemMaximumQuantityReachedForItem = “Your order exceeds the maximum order quantity of this item.”
+errorBasketItemMaximumQuantityReachedForVariation = “Your order exceeds the maximum order quantity of this variation.”
+errorBasketItemMinimumQuantityNotReachedForVariation = “Your order does not fulfil the minimum order quantity of this variation.”
+; error - Exceptions
 ; footer - Footer
 footerAllRightsReserved = "All rights reserved."
 footerCancellationForm = "Cancellation form"
