CHANGE Widget.properties - add 'shippingPrivacyCheckLabel'

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -385,3 +385,5 @@ subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorauszuwä
 subscribeNewsletterCheckIsRequiredLabel = "Pflichtfeld"
 subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob die Checkbox vor Kaufabschluss angehakt werden muss."
 subscribeNewsletterCheckLabel = "Newsletter-Checkbox"
+; Shipping Privacy Check
+shippingPrivacyCheckLabel = "Shipping box"
