--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -362,3 +362,5 @@ subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorausgewä
 subscribeNewsletterCheckIsRequiredLabel = "Pflicht"
 subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob Checkbox Pflicht ist, bevor ein Kauf abgeschlossen werden kann."
 subscribeNewsletterCheckLabel = "Newsletter Anmeldungs Checkbox"
+; Shipping Privacy Check
+shippingPrivacyCheckLabel = "Shipping box"
