--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -299,19 +299,19 @@ paymentProviderLabel = "Zahlungsart Auswahl"
 paymentProviderHinttextLabel = "Hinweistext"
 paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Basket totals
-basketTotalsLabel = "Summen TODO"
-basketTotalsVisibleFields = ""
-showBasketValueNet = ""
-showBasketValueGross = ""
+basketTotalsLabel = "Summen"
+basketTotalsVisibleFields = "Preisinformationen anzeigen"
+showBasketValueNet = "Nettowarenwert"
+showBasketValueGross = "Bruttowarenwert"
 showBasketTotalsRebate = ""
-showBasketShippingCostsNet = ""
-showBasketShippingCostsGross = ""
-showBasketTotalSumNet = ""
+showBasketShippingCostsNet = "Nettoversandkosten"
+showBasketShippingCostsGross = "Bruttoversandkosten"
+showBasketTotalSumNet = "Nettogesamtsumme"
 showBasketCoupon = ""
-showBasketVats = ""
-showBasketTotalSumGross = ""
+showBasketVats = "Mehrwertsteuer"
+showBasketTotalSumGross = "Bruttogesamtsumme"
 showBasketCouponDiscount = ""
-showBasketOpenAmount = ""
+showBasketOpenAmount = "Ausstehender Betrag"
 ; Place order
 placeOrderButtonSizeLabel = "Button-Größe"
 placeOrderButtonSizeLg = "Groß"
@@ -386,4 +386,4 @@ subscribeNewsletterCheckIsRequiredLabel = "Pflichtfeld"
 subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob die Checkbox vor Kaufabschluss angehakt werden muss."
 subscribeNewsletterCheckLabel = "Newsletter-Checkbox"
 ; Shipping Privacy Check
-shippingPrivacyCheckLabel = "Shipping box"
+shippingPrivacyCheckLabel = "Versandinformationen-Checkbox"
