--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -303,11 +303,11 @@ basketTotalsLabel = "Summen"
 basketTotalsVisibleFields = "Preisinformationen anzeigen"
 showBasketValueNet = "Nettowarenwert"
 showBasketValueGross = "Bruttowarenwert"
-showBasketTotalsRebate = ""
+showBasketTotalsRebate = "Rabatt"
 showBasketShippingCostsNet = "Nettoversandkosten"
 showBasketShippingCostsGross = "Bruttoversandkosten"
 showBasketTotalSumNet = "Nettogesamtsumme"
-showBasketCoupon = ""
+showBasketCoupon = "Gutscheinbetrag"
 showBasketVats = "Mehrwertsteuer"
 showBasketTotalSumGross = "Bruttogesamtsumme"
 showBasketCouponDiscount = ""
