added hint text option, fixed translations

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -361,6 +361,8 @@ addressFieldEnPhoneNumber = Phone number
 basketLabel = "Warenkorbinhalt"
 ; ContactWish
 contactWishLabel = "Hinweise und Wünsche"
+contactWishHinttextLabel = "Hinweistext"
+contactWishHinttextTooltip = "Hinweistext eingeben. Dieser Text wird nach der Überschrift angezeigt."
 ; Coupon
 couponLabel = "Gutscheineingabe"
 ; Terms and conditions checkbox
