--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -291,11 +291,11 @@ collapseBoxTextareaLabel = "Answer"
 collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
 ; Shipping Profile Select
 shippingProfileLabel = "Versandauswahl TODO"
-shippingProfileHinttextLabel = "Hinweistext"
+shippingProfileHinttextLabel = "Hint text"
 shippingProfileHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Payment provider
 paymentProviderLabel = "Payment provider select"
-paymentProviderHinttextLabel = "Hinttext"
+paymentProviderHinttextLabel = "Hint text"
 paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Basket totals
 basketTotalsLabel = "Basket totals TODO"
@@ -347,7 +347,10 @@ addressFieldEnPhoneNumber = Telefonnummer
 ; Basket
 basketLabel = "Shopping cart content"
 ; ContactWish
-contactWishLabel = "Notes and requests"
+contactWish = "Notes and requests"
+contactWishHinttextLabel = "Hint text"
+contactWishHinttextTooltip = "Hinweistext eingeben. Dieser Text wird nach der Überschrift angezeigt."
+
 ; Coupon
 couponLabel = "Coupon input"
 ; Subscribe Newsletter Check
