--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -290,22 +290,22 @@ collapseBoxHeadlineTooltip = "Enter question. This text will be the title of the
 collapseBoxTextareaLabel = "Answer"
 collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
 ; Shipping Profile Select
-shippingProfileLabel = "Versandauswahl TODO"
+shippingProfileLabel = "Shipping profile selection"
 shippingProfileHinttextLabel = "Hint text"
-shippingProfileHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
+shippingProfileHinttextTooltip = "Enter hint text. This is displayed between title and selection."
 ; Payment provider
-paymentProviderLabel = "Payment provider select"
+paymentProviderLabel = "Payment provider selection"
 paymentProviderHinttextLabel = "Hint text"
-paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
+paymentProviderHinttextTooltip = "Enter hint text. This is displayed between title and selection."
 ; Basket totals
-basketTotalsLabel = "Basket totals TODO"
+basketTotalsLabel = "Basket totals"
 ; Place order
-placeOrderButtonSizeLabel = "Button Größe"
-placeOrderButtonSizeLg = "Groß"
-placeOrderButtonSizeNormal = "Normal / Standard"
-placeOrderButtonSizeSm = "Klein"
-placeOrderButtonSizeTooltip = "..."
-placeOrderLabel = "Kaufabschluss Button"
+placeOrderButtonSizeLabel = "Button size"
+placeOrderButtonSizeLg = "Large"
+placeOrderButtonSizeNormal = "Default"
+placeOrderButtonSizeSm = "Small"
+placeOrderButtonSizeTooltip = "Select button size."
+placeOrderLabel = "Purchase button"
 ; Address
 addressLabel = "Addressauswahl TODO"
 addressType = "addressType TODO"
@@ -354,16 +354,16 @@ contactWishHinttextTooltip = "Hinweistext eingeben. Dieser Text wird nach der Ü
 ; Coupon
 couponLabel = "Coupon input"
 ; Subscribe Newsletter Check
-subscribeNewsletterCheckCustomTextLabel = "Eigener Text"
-subscribeNewsletterCheckCustomTextTooltip = "Eigenen Text für die Checkbox eingeben."
-subscribeNewsletterCheckEmailFolderLabel = "E-Mail-Ordner ID"
-subscribeNewsletterCheckEmailFolderTooltip = "ID des E-Mail-Ordners eingeben."
-subscribeNewsletterCheckHideCheckboxLabel = "Checkbox ausblenden"
-subscribeNewsletterCheckHideCheckboxTooltip = "Wählen um Checkbox auszublenden."
-subscribeNewsletterCheckIsPreselectedLabel = "Checkbox vorausgewählt"
-subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorausgewählt darzustellen."
-subscribeNewsletterCheckIsRequiredLabel = "Pflicht"
-subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob Checkbox Pflicht ist, bevor ein Kauf abgeschlossen werden kann."
-subscribeNewsletterCheckLabel = "Newsletter Anmeldungs Checkbox"
+subscribeNewsletterCheckCustomTextLabel = "Text"
+subscribeNewsletterCheckCustomTextTooltip = "Enter text that is displayed next to checkbox."
+subscribeNewsletterCheckEmailFolderLabel = "E-mail folder ID"
+subscribeNewsletterCheckEmailFolderTooltip = "Enter e-mail folder ID."
+subscribeNewsletterCheckHideCheckboxLabel = "Hide checkbox"
+subscribeNewsletterCheckHideCheckboxTooltip = "Activate to hide checkbox."
+subscribeNewsletterCheckIsPreselectedLabel = "Preselect checkbox"
+subscribeNewsletterCheckIsPreselectedTooltip = "Activate to preselect checkbox."
+subscribeNewsletterCheckIsRequiredLabel = "Required"
+subscribeNewsletterCheckIsRequiredTooltip = "Activate to make checkbox mandatory before purchase."
+subscribeNewsletterCheckLabel = "Newsletter subscription checkbox"
 ; Shipping Privacy Check
-shippingPrivacyCheckLabel = "Shipping box"
+shippingPrivacyCheckLabel = "Shipping information checkbox"
