fixed text error

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -382,7 +382,7 @@ subscribeNewsletterCheckEmailFolderLabel = "E-Mail-Ordner ID"
 subscribeNewsletterCheckEmailFolderTooltip = "ID des E-Mail-Ordners eingeben."
 subscribeNewsletterCheckHideCheckboxLabel = "Checkbox ausblenden"
 subscribeNewsletterCheckHideCheckboxTooltip = "Wählen um Checkbox auszublenden."
-subscribeNewsletterCheckIsPreselectedLabel = "Checkbox vorausgewählen"
+subscribeNewsletterCheckIsPreselectedLabel = "Checkbox vorauswählen"
 subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorauszuwählen."
 subscribeNewsletterCheckIsRequiredLabel = "Pflichtfeld"
 subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob die Checkbox vor Kaufabschluss angehakt werden muss."
