--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -307,15 +307,15 @@ placeOrderButtonSizeSm = "Small"
 placeOrderButtonSizeTooltip = "Select button size."
 placeOrderLabel = "Purchase button"
 ; Address
-addressLabel = "Addressauswahl TODO"
-addressType = "addressType TODO"
-addressTypeTooltip = "addressTypeTooltip TODO"
-addressInvoice = "addressInvoice TODO"
-addressShipping = "addressShipping TODO"
-addressLayout = "addressLayout TODO"
-addressLayoutTooltip = "addressLayoutTooltip TODO"
-addressLayoutDE = "addressLayoutDE TODO"
-addressLayoutGB = "addressLayoutGB TODO"
+addressLabel = "Address selection"
+addressType = "Address type"
+addressTypeTooltip = "Select address type."
+addressInvoice = "Invoice address"
+addressShipping = "Shipping address"
+addressLayout = "Address format"
+addressLayoutTooltip = "Select address format GER or UK."
+addressLayoutDE = "Address format GER"
+addressLayoutGB = "Address format UK"
 addressFieldsInvoiceDE = "addressFieldsInvoiceDE TODO"
 addressRequiredFieldsInvoiceDE = "addressRequiredFieldsInvoiceDE TODO"
 addressFieldsInvoiceGB = "addressFieldsInvoiceGB TODO"
