Updated translations in widget.properties

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -353,16 +353,16 @@ addressFieldAddress3 = Adresszusatz 1
 addressFieldAddress4 = Adresszusatz 2
 addressFieldStateId = Bundesland
 addressFieldPhoneNumber = Telefonnummer
-addressFieldEnName1 = Company
-addressFieldEnVatNumber = VAT number
-addressFieldEnSalutation = Form of address
-addressFieldEnTitle = Title
-addressFieldEnBirthday = Date of birth
-addressFieldEnName4 = Name affix
-addressFieldEnAddress2 = Address 2
-addressFieldEnAddress3 = Address 3
-addressFieldEnAddress4 = Address 4
-addressFieldEnPhoneNumber = Phone number
+addressFieldEnName1 = Firma
+addressFieldEnVatNumber = Ust.-Nr.
+addressFieldEnSalutation = Anrede
+addressFieldEnTitle = Titel
+addressFieldEnBirthday = Geburtsdatum
+addressFieldEnName4 = Namenszusatz
+addressFieldEnAddress2 = Adresse 2
+addressFieldEnAddress3 = Adresse 3
+addressFieldEnAddress4 = Adresse 4
+addressFieldEnPhoneNumber = Telefonnummer
 ; Basket
 basketLabel = "Warenkorbinhalt"
 ; ContactWish
