renamed Kassenbereich to Checkout

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -282,7 +282,7 @@ seperatorMarginCustom = "Benutzerdefiniert"
 seperatorMarginTop = "Außenabstand oben"
 seperatorMarginValue = "Wert"
 ; Categories
-categoryCheckout = "Kassenbereich"
+categoryCheckout = "Checkout"
 categoryStructure = "Struktur"
 categoryFooter = "Footer"
 categoryHeader = "Header"
