Adjust separator widget using new spacing input

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -274,12 +274,8 @@ navigationNavigationStyleMegaMenu = "Mega menu"
 navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
-seperatorCustomUnit ="Custom Unit"
 separatorLabel = "Dividing line"
-seperatorMarginBottom = "Margin bottom"
-seperatorMarginCustom = "Custom"
-seperatorMarginTop = "Margin top"
-seperatorMarginValue = "Value"
+separatorMargin = "Margin"
 ; Types
 categoryCheckout = "Checkout"
 categoryFooter = "Footer"
