--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -395,3 +395,4 @@ subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob die Checkbox vor Kaufab
 subscribeNewsletterCheckLabel = "Newsletter-Checkbox"
 ; Shipping Privacy Check
 shippingPrivacyCheckLabel = "Versandinformationen-Checkbox"
+shippingPrivacyCheckPlaceholderDescription = "An dieser Stelle wird nur Inhalt angezeigt, wenn ein Versandprofil ausgewählt ist, für das die Option "Einwilligung zur Datenübermittlung" aktiv ist."
