Set positions of new widgets

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -282,7 +282,9 @@ seperatorMarginCustom = "Benutzerdefiniert"
 seperatorMarginTop = "Außenabstand oben"
 seperatorMarginValue = "Wert"
 ; Categories
+categoryBasket = "Warenkorb"
 categoryCheckout = "Checkout"
+categoryCustomer = "Kundendaten"
 categoryStructure = "Struktur"
 categoryFooter = "Footer"
 categoryHeader = "Header"
