--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -281,7 +281,9 @@ seperatorMarginCustom = "Custom"
 seperatorMarginTop = "Margin top"
 seperatorMarginValue = "Value"
 ; Types
+categoryBasket = "Basket"
 categoryCheckout = "Checkout"
+categoryCustomer = "Customer information"
 categoryFooter = "Footer"
 categoryHeader = "Header"
 categoryImage = "Image"
