Refactor settings handler

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -457,5 +457,5 @@ logPerformanceLevelDevelopment = Entwicklungsmodus
 logPerformanceLevelLive = Live-Modus
 logCheckSyntax = Markup vor Initialisierung auf Fehler prüfen
 
-routingCategoryCheckout=Kategorie für Checkout
-routingDefaultCheckout=Standard-Route für Checkout
+routingCategoryCheckout = Kategorie für Checkout
+routingEnableRouteCheckout = Route "/checkout" aktivieren
