--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -457,5 +457,5 @@ logPerformanceLevelDevelopment = Development
 logPerformanceLevelLive = Live
 logCheckSyntax = Check for errors in markup before initialization
 
-routingCategoryCheckout=Category for checkout
-routingDefaultCheckout=Default Route for checkout
+routingCategoryCheckout = Category for checkout
+routingEnableRouteCheckout = Enable route "/checkout"
