add top seller option

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -262,6 +262,8 @@ sortDataManufacturerAsc = Hersteller A-Z
 sortDataManufacturerDesc = Hersteller Z-A
 sortDataItemScore = Relevanz
 sortDataRandom = Zufällig
+sortDataTopsellerAsc = Meistverkaufte Artikel ⬆
+sortDataTopsellerDesc = Meistverkaufte Artikel ⬇
 sortDefaultSortingLabel = Standardsortierungswert in der Kategorieansicht
 sortingPriorityCategory1Label = Empfohlene Artikelsortierung: Erster Sortierungswert
 sortingPriorityCategory2Label = Empfohlene Artikelsortierung: Zweiter Sortierungswert
