--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -290,6 +290,8 @@ itemVariationCustomNumber_asc = "Variantennummer ⬆"
 itemVariationCustomNumber_desc = "Variantennummer ⬇"
 itemVariationLastUpdateTimestamp_asc = "Letzte Aktualisierung"
 itemVariationLastUpdateTimestamp_desc = "Erste Aktualisierung"
+itemVariationTopseller_asc = "Meistverkaufe Artikel ⬆"
+itemVariationTopseller_desc = "Meistverkaufe Artikel ⬇"
 ; item - Artikel
 ; itemSearch - Artikelsuche
 itemSearchResults = "Suchergebnisse für:"
