--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -290,6 +290,8 @@ itemVariationCustomNumber_asc = "Variation number ⬆"
 itemVariationCustomNumber_desc = "Variation number ⬇"
 itemVariationLastUpdateTimestamp_asc = "Last update"
 itemVariationLastUpdateTimestamp_desc = "First update"
+itemVariationTopseller_asc = "Top Seller ⬆"
+itemVariationTopseller_desc = "Top Seller ⬇"
 ; item - Item
 ; itemSearch - Item search
 itemSearchResults = "Search results for:"
