finished myaccount account settings widget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -276,3 +276,6 @@ collapseBoxHeadlineLabel = "Frage"
 collapseBoxHeadlineTooltip = "Frage eingeben. Dieser Text wird als Titel des Eintrags angezeigt."
 collapseBoxTextareaLabel = "Antwort"
 collapseBoxTextareaTooltip = "Antwort eingeben. Dieser Text wird als Antwort des Eintrags nach Klick auf die Frage angezeigt."
+; MyAccount
+myAccountHintTextLabel = "Hinweistext"
+myAccountAccountSettingsLabel = "Kontoeinstellungen"
