--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -276,3 +276,6 @@ collapseBoxHeadlineLabel = "Question"
 collapseBoxHeadlineTooltip = "Enter question. This text will be the title of the entry."
 collapseBoxTextareaLabel = "Answer"
 collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
+; MyAccount
+myAccountHintTextLabel = "Hinweistext"
+myAccountAccountSettingsLabel = "Account settings"
