ADD support for my-account categories

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -459,3 +459,5 @@ logCheckSyntax = Markup vor Initialisierung auf Fehler prüfen
 
 routingCategoryCheckout = Kategorie für Checkout
 routingEnableRouteCheckout = Route "/checkout" aktivieren
+routingCategoryMyAccount = Kategorie für "Mein Konto"
+routingEnableRouteMyAccount = Route "/my-account" aktivieren
