--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -1,4 +1,4 @@
-availability1 = Availability 1
++availability1 = Availability 1
 availability10 = Availability 10
 availability2 = Availability 2
 availability3 = Availability 3
@@ -459,3 +459,5 @@ logCheckSyntax = Check for errors in markup before initialization
 
 routingCategoryCheckout = Category for checkout
 routingEnableRouteCheckout = Enable route "/checkout"
+routingCategoryMyAccount = Category for "My Account"
+routingEnableRouteMyAccount = Enable route "/my-account"
