UPDATE basket totals coupon config and translation keys

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -309,10 +309,10 @@ showBasketTotalsRebate = "Rabatt"
 showBasketShippingCostsNet = "Nettoversandkosten"
 showBasketShippingCostsGross = "Bruttoversandkosten"
 showBasketTotalSumNet = "Nettogesamtsumme"
-showBasketCoupon = "Gutscheinbetrag"
+showBasketPromotionCoupon = "Gutscheinbetrag"
 showBasketVats = "Mehrwertsteuer"
 showBasketTotalSumGross = "Bruttogesamtsumme"
-showBasketCouponDiscount = ""
+showBasketSalesCoupon = ""
 showBasketOpenAmount = "Ausstehender Betrag"
 ; Place order
 placeOrderButtonSizeLabel = "Button-Größe"
