--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -310,10 +310,10 @@ showBasketTotalsRebate = "Rebate"
 showBasketShippingCostsNet = "Shipping (net)"
 showBasketShippingCostsGross = "Shipping (gross)"
 showBasketTotalSumNet = "Total (net)"
-showBasketCoupon = "Coupon value"
+showBasketPromotionCoupon = "Coupon value"
 showBasketVats = "VAT"
 showBasketTotalSumGross = "Total (gross)"
-showBasketCouponDiscount = "Coupon discount"
+showBasketSalesCoupon = "Coupon discount"
 showBasketOpenAmount = "Outstanding amount"
 ; Place order
 placeOrderButtonSizeLabel = "Button size"
