--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -293,11 +293,11 @@ collapseBoxHeadlineTooltip = "Frage eingeben. Dieser Text wird als Titel des Ein
 collapseBoxTextareaLabel = "Antwort"
 collapseBoxTextareaTooltip = "Antwort eingeben. Dieser Text wird als Antwort des Eintrags nach Klick auf die Frage angezeigt."
 ; Shipping Profile Select
-shippingProfileLabel = "Versandauswahl TODO"
+shippingProfileLabel = "Versandartauswahl"
 shippingProfileHinttextLabel = "Hinweistext"
 shippingProfileHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Payment provider
-paymentProviderLabel = "Zahlungsart Auswahl"
+paymentProviderLabel = "Zahlungsartauswahl"
 paymentProviderHinttextLabel = "Hinweistext"
 paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Basket totals
@@ -309,10 +309,10 @@ showBasketTotalsRebate = "Rabatt"
 showBasketShippingCostsNet = "Nettoversandkosten"
 showBasketShippingCostsGross = "Bruttoversandkosten"
 showBasketTotalSumNet = "Nettogesamtsumme"
-showBasketPromotionCoupon = "Gutscheinbetrag"
+showBasketPromotionCoupon = "Aktionsgutschein"
 showBasketVats = "Mehrwertsteuer"
 showBasketTotalSumGross = "Bruttogesamtsumme"
-showBasketSalesCoupon = ""
+showBasketSalesCoupon = "Verkaufsgutschein"
 showBasketOpenAmount = "Ausstehender Betrag"
 ; Place order
 placeOrderButtonSizeLabel = "Button-Größe"
@@ -370,22 +370,22 @@ couponLabel = "Gutscheineingabe"
 ; Terms and conditions checkbox
 gtcCheckLabel = "AGB-Checkbox"
 gtcCheckHideCheckboxLabel = "Checkbox ausblenden"
-gtcCheckHideCheckboxTooltip = "Wählen, um Checkbox auszublenden."
+gtcCheckHideCheckboxTooltip = "Aktivieren, um Checkbox auszublenden."
 gtcCheckIsPreselectedLabel = "Checkbox vorauswählen"
-gtcCheckIsPreselectedTooltip = "Wählen, um Checkbox vorauszuwählen."
+gtcCheckIsPreselectedTooltip = "Aktivieren, um Checkbox vorauszuwählen."
 gtcCheckIsRequiredLabel = "Pflichtfeld"
 gtcCheckIsRequiredTooltip = "Wählen, ob die Checkbox vor Kaufabschluss angehakt werden muss."
 gtcCheckCustomTextLabel = "Text"
 gtcCheckCustomTextTooltip = "Text für die Checkbox eingeben."
 ; Subscribe Newsletter Check
 subscribeNewsletterCheckCustomTextLabel = "Text"
-subscribeNewsletterCheckCustomTextTooltip = "Text für die Checkbox eingeben."
+subscribeNewsletterCheckCustomTextTooltip = "Text eingeben. Dieser wird neben der Checkbox angezeigt"
 subscribeNewsletterCheckEmailFolderLabel = "E-Mail-Ordner ID"
 subscribeNewsletterCheckEmailFolderTooltip = "ID des E-Mail-Ordners eingeben."
 subscribeNewsletterCheckHideCheckboxLabel = "Checkbox ausblenden"
-subscribeNewsletterCheckHideCheckboxTooltip = "Wählen um Checkbox auszublenden."
+subscribeNewsletterCheckHideCheckboxTooltip = "Aktivieren, um Checkbox auszublenden."
 subscribeNewsletterCheckIsPreselectedLabel = "Checkbox vorauswählen"
-subscribeNewsletterCheckIsPreselectedTooltip = "Wählen, um Checkbox vorauszuwählen."
+subscribeNewsletterCheckIsPreselectedTooltip = "Aktivieren, um Checkbox vorauszuwählen."
 subscribeNewsletterCheckIsRequiredLabel = "Pflichtfeld"
 subscribeNewsletterCheckIsRequiredTooltip = "Wählen, ob die Checkbox vor Kaufabschluss angehakt werden muss."
 subscribeNewsletterCheckLabel = "Newsletter-Checkbox"
